--- a/src/EmployeeTrackingV2.Data/EmployeeTrackingV2.Data.csproj
+++ b/src/EmployeeTrackingV2.Data/EmployeeTrackingV2.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,6 +10,14 @@
     <Folder Include="Repositories\Abstract\" />
     <Folder Include="Repositories\Concrete\" />
     <Folder Include="Repositories\UnitOfWork\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeTrackingV2.Entities\EmployeeTrackingV2.Entities.csproj" />
   </ItemGroup>
 
 </Project>
