--- a/src/JWTAuth.Entities/JWTAuth.Entities.csproj
+++ b/src/JWTAuth.Entities/JWTAuth.Entities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Utilities\Response\" />
+    <Folder Include="Dto\" />
   </ItemGroup>
+
 
 </Project>
