--- a/src/JWTAuth.Business/JWTAuth.Business.csproj
+++ b/src/JWTAuth.Business/JWTAuth.Business.csproj
@@ -7,9 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Concrete\" />
-    <Folder Include="Abstract\" />
     <Folder Include="Validations\FluentValidation\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JWTAuth.Core\JWTAuth.Core.csproj" />
+    <ProjectReference Include="..\JWTAuth.Data\JWTAuth.Data.csproj" />
   </ItemGroup>
 
 </Project>
