--- a/src/JWTAuth.WebAPI/JWTAuth.WebAPI.csproj
+++ b/src/JWTAuth.WebAPI/JWTAuth.WebAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,10 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\JWTAuth.Business\JWTAuth.Business.csproj" />
+    <ProjectReference Include="..\JWTAuth.Core\JWTAuth.Core.csproj" />
     <ProjectReference Include="..\JWTAuth.Data\JWTAuth.Data.csproj" />
   </ItemGroup>
 
