--- a/src/JWTAuth.WebAPI/Properties/launchSettings.json
+++ b/src/JWTAuth.WebAPI/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "EmployeeTrackingV2.WebAPI": {
+    "JWTAuth.WebAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
