--- a/src/JWTAuth.Core/JWTAuth.Core.csproj
+++ b/src/JWTAuth.Core/JWTAuth.Core.csproj
@@ -8,7 +8,13 @@
 
   <ItemGroup>
     <Folder Include="FluentValidation\" />
-    <Folder Include="Utilities\Response\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.22.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
   </ItemGroup>
 
 </Project>
