--- a/src/JWTAuth.Entities/JWTAuth.Entities.csproj
+++ b/src/JWTAuth.Entities/JWTAuth.Entities.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dto\" />
+    <ProjectReference Include="..\JWTAuth.Core\JWTAuth.Core.csproj" />
   </ItemGroup>
 
 
