--- a/src/JWTAuth.WebAPI/appsettings.json
+++ b/src/JWTAuth.WebAPI/appsettings.json
@@ -13,6 +13,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=JWTAuthDB;User Id=postgres;Password=root;"
+
+    "DefaultConnection": "Server=localhost;Port=5432;Database=JWTAuthDB;Userid=postgres;Password=root;"
+
   }
 }
